cp project/force-app/main/default/objects/Project_Access__c/Project_Access__c.object-meta.xml
<CustomObject>
    <description>Junction controlling partner project marketing authorization</description>
    <label>Project Access</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Access ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>