cp project/force-app/main/default/objects/Project_Access__c/fields/Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Access_Notes__c</fullName>
    <label>Access Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>