cp project/force-app/main/default/objects/Project_Access__c/fields/Access_Status__c.field-meta.xml
<CustomField>
    <fullName>Access_Status__c</fullName>
    <label>Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>