cp project/force-app/main/default/objects/Project_Access__c/fields/Can_Create_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Site_Visit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Create Site Visit</label>
    <type>Checkbox</type>
</CustomField>