cp project/force-app/main/default/objects/Project_Access__c/fields/Can_Register_Lead__c.field-meta.xml
<CustomField>
    <fullName>Can_Register_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Register Lead</label>
    <type>Checkbox</type>
</CustomField>