cp project/force-app/main/default/objects/Project_Access__c/fields/Can_View_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Inventory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can View Inventory</label>
    <type>Checkbox</type>
</CustomField>