cp project/force-app/main/default/objects/Project_Access__c/fields/Commission_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Commission_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Commission Eligible</label>
    <type>Checkbox</type>
</CustomField>