cp project/force-app/main/default/objects/Project_Access__c/validationRules/Active_Requires_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Requires_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Access_Status__c, "Active"), OR(ISBLANK(Start_Date__c), ISBLANK(End_Date__c)))</errorConditionFormula>
    <errorMessage>Start Date and End Date are mandatory when Access Status is Active.</errorMessage>
</ValidationRule>