cp project/force-app/main/default/objects/Project_Access__c/validationRules/End_Date_Must_Be_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c)), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
</ValidationRule>